--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-@import "./globals.css";
-@import "./components.css";
-@import "./header.css";
-@import "./profile.css";
-@import "./about.css";
-@import "./skills.css";
-@import "./projects.css";
-@import "./contact.css";
+@import './globals.css';
+@import './components.css';
+@import './header.css';
+@import './profile.css';
+@import './about.css';
+@import './skills.css';
+@import './projects.css';
+@import './contact.css';
