--- a/css/components.css
+++ b/css/components.css
@@ -45,7 +45,7 @@
     /* letter-spacing: ; */
 }
 
-.titleMain.dark {
+.dark .titleMain {
     color: #fff;
 }
 
@@ -86,7 +86,7 @@
     transform: scale(1.05);
 }
 
-.arrow.dark i {
+.dark .arrow i {
     color: #fff;
 }
 
@@ -229,7 +229,7 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
 }
 
-.project-img.dark .fechar {
+.dark .project-img .fechar {
     background-color: #fff;
     color: #333;
 }
@@ -255,7 +255,7 @@
     opacity: 1;
 }
 
-.swiper.dark .swiper-pagination-bullet {
+.dark .swiper .swiper-pagination-bullet {
     background-color: #f1f1f1;
 }
 .swiper-pagination-bullet-active {
@@ -267,14 +267,14 @@
     color: #333;
 }
 
-.swiper.dark .swiper-pagination-bullet-active {
+.dark .swiper .swiper-pagination-bullet-active {
     background-color: #fff;
 }
 
-.swiper.dark .swiper-button-next {
+.dark .swiper .swiper-button-next {
     color: #fff;
 }
-.swiper.dark .swiper-button-prev {
+.dark .swiper .swiper-button-prev {
     color: #fff;
 }
 
