--- a/css/profile.css
+++ b/css/profile.css
@@ -1,225 +1,221 @@
 #profile .arrow i {
-  left: 600px;
-  bottom: 130px;
+    left: 600px;
+    bottom: 130px;
 }
 
 #profile {
-  margin-top: -60px;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 3rem;
-  position: relative;
-  z-index: 0;
+    margin-top: -60px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    position: relative;
+    z-index: 0;
 }
 
 @keyframes coolAnimation {
-  25% {
-    transform: scale(1);
-  }
+    25% {
+        transform: scale(1);
+    }
 
-  50% {
-    transform: scale(1.07);
-  }
+    50% {
+        transform: scale(1.07);
+    }
 
-  100% {
-    transform: scale(1);
-  }
+    100% {
+        transform: scale(1);
+    }
 }
 
 .intro_picture img {
-  width: 385px;
-  height: 385px;
-  border-radius: 50%;
-  object-fit: cover;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
-  transition: all 0.3s ease-in-out;
-  animation: coolAnimation 2s;
-}
-
-.intro_picture img:hover {
-  transform: scale(1.03);
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.8);
-}
-
-.intro_info {
-  display: grid;
-  gap: 12px;
-  text-align: center;
-  grid-template-columns: 1fr;
-  font-family: "Clash Display", sans-serif;
-}
-
-.intro_info h1 {
-  font-weight: 600;
-}
-
-.intro_info .first_p {
-  font-size: 1.4rem;
-  letter-spacing: 1px;
-  margin-bottom: 0.3rem;
-}
-
-.intro_info .last_p {
-  font-size: 1.75rem;
-  letter-spacing: 1px;
-  margin-top: 0.875rem;
-}
-
-.intro_info.dark p {
-  color: #e1e1e1;
-}
-
-.intro_info > i {
-  position: absolute;
-  bottom: 450px;
-  right: 160px;
-  font-size: 30px;
-  color: #333;
-  transform: rotate(30deg);
-}
-
-.intro_info.dark > i {
-  color: #fff;
-}
-
-.dev-links {
-  margin-top: 32px;
-  display: flex;
-  gap: 45px;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  font-family: "Poppins", sans-serif;
-}
-
-.dev-links a {
-  padding: 15px 30px;
-  border-radius: 30px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  font-weight: 500;
-}
-
-.dev-links a:first-child {
-  outline: 1px solid #333;
-  transition: all 0.3s ease;
-}
-
-.dev-links a:first-child:hover {
-  background: #f1f1f1;
-  transform: scale(1.05);
-}
-
-.dev-links a:last-child {
-  outline: 1px solid #333;
-  background: #333;
-  color: #fff;
-  transition: all 0.3s ease;
-}
-
-.dev-links a:last-child:hover {
-  background: #555;
-  transform: scale(1.05);
-}
-
-.dev-links.dark a:first-child {
-  background: #22222276;
-  outline: 1px solid #f1f1f1;
-  transition: all 0.3s ease;
-  color: #fff;
-  /* box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.2); */
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
-}
-
-.dev-links.dark a:first-child:hover {
-  background: #444;
-  transform: scale(1.05);
-}
-
-.dev-links.dark a:last-child {
-  outline: 1px solid #666;
-  background: #fff;
-  color: #111;
-  transition: all 0.3s ease;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
-}
-
-.dev-links.dark a:last-child:hover {
-  background: #f1f1f1;
-  transform: scale(1.05);
-  color: #111;
-}
-
-.dev-socials {
-  margin-top: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
-}
-
-.dev-socials i {
-  font-size: 36px;
-  transition: all 0.3s;
-  color: #333;
-}
-
-.dev-socials.dark i {
-  color: #fff;
-}
-
-.dev-socials i:hover {
-  transform: scale(1.05);
-  color: #777;
-}
-
-@media (max-width: 950px) {
-  #profile .arrow i {
-    left: 2px;
-    bottom: 0px;
-    font-size: 35px;
-    position: relative;
-    display: none;
-  }
-
-  #profile {
-    height: max-content;
-    flex-direction: column;
-    margin: 5rem 0px 0px 0px;
-    justify-content: start;
-  }
-
-  .intro_picture img {
-    width: 220px;
-    height: 220px;
+    width: 385px;
+    height: 385px;
     border-radius: 50%;
     object-fit: cover;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
     transition: all 0.3s ease-in-out;
-  }
+    animation: coolAnimation 2s;
+}
 
-  .intro_info .last_p {
-    font-size: 1.2rem;
-    margin-top: 0.3rem;
-  }
+.intro_picture img:hover {
+    transform: scale(1.03);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.8);
+}
 
-  .intro_info .first_p {
-    font-size: 1.1rem;
-    margin-bottom: -0.2rem;
-  }
+.intro_info {
+    display: grid;
+    gap: 12px;
+    text-align: center;
+    grid-template-columns: 1fr;
+    font-family: 'Clash Display', sans-serif;
+}
 
-  .dev-links {
-    margin-top: 20px;
+.intro_info h1 {
+    font-weight: 600;
+}
+
+.intro_info .first_p {
+    font-size: 1.4rem;
+    letter-spacing: 1px;
+    margin-bottom: 0.3rem;
+}
+
+.intro_info .last_p {
+    font-size: 1.75rem;
+    letter-spacing: 1px;
+    margin-top: 0.875rem;
+}
+
+.dark .intro_info p {
+    color: #e1e1e1;
+}
+
+.intro_info > i {
+    position: absolute;
+    bottom: 450px;
+    right: 160px;
+    font-size: 30px;
+    color: #333;
+    transform: rotate(30deg);
+}
+
+.dark .intro_info > i {
+    color: #fff;
+}
+
+.dev-links {
+    margin-top: 32px;
     display: flex;
-    gap: 20px;
-  }
+    gap: 45px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Poppins', sans-serif;
+}
 
-  .dev-links a {
-    padding: 10px 20px;
-  }
+.dev-links a {
+    padding: 15px 30px;
+    border-radius: 30px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    font-weight: 500;
+}
 
-  /* .dev-socials {
-    margin-bottom: 10rem;
-  } */
+.dev-links a:first-child {
+    outline: 1px solid #333;
+    transition: all 0.3s ease;
+}
+
+.dev-links a:first-child:hover {
+    background: #f1f1f1;
+    transform: scale(1.05);
+}
+
+.dev-links a:last-child {
+    outline: 1px solid #333;
+    background: #333;
+    color: #fff;
+    transition: all 0.3s ease;
+}
+
+.dev-links a:last-child:hover {
+    background: #555;
+    transform: scale(1.05);
+}
+
+.dark .dev-links a:first-child {
+    background: #22222276;
+    outline: 1px solid #f1f1f1;
+    transition: all 0.3s ease;
+    color: #fff;
+    /* box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.2); */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.dark .dev-links a:first-child:hover {
+    background: #444;
+    transform: scale(1.05);
+}
+
+.dark .dev-links a:last-child {
+    outline: 1px solid #666;
+    background: #fff;
+    color: #111;
+    transition: all 0.3s ease;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+}
+
+.dark .dev-links a:last-child:hover {
+    background: #f1f1f1;
+    transform: scale(1.05);
+    color: #111;
+}
+
+.dev-socials {
+    margin-top: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+}
+
+.dev-socials i {
+    font-size: 36px;
+    transition: all 0.3s;
+    color: #333;
+}
+
+.dark .dev-socials i {
+    color: #fff;
+}
+
+.dev-socials i:hover {
+    transform: scale(1.05);
+    color: #777;
+}
+
+@media (max-width: 950px) {
+    #profile .arrow i {
+        left: 2px;
+        bottom: 0px;
+        font-size: 35px;
+        position: relative;
+        display: none;
+    }
+
+    #profile {
+        height: max-content;
+        flex-direction: column;
+        margin: 5rem 0px 0px 0px;
+        justify-content: start;
+    }
+
+    .intro_picture img {
+        width: 220px;
+        height: 220px;
+        border-radius: 50%;
+        object-fit: cover;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+        transition: all 0.3s ease-in-out;
+    }
+
+    .intro_info .last_p {
+        font-size: 1.2rem;
+        margin-top: 0.3rem;
+    }
+
+    .intro_info .first_p {
+        font-size: 1.1rem;
+        margin-bottom: -0.2rem;
+    }
+
+    .dev-links {
+        margin-top: 20px;
+        display: flex;
+        gap: 20px;
+    }
+
+    .dev-links a {
+        padding: 10px 20px;
+    }
 }
