--- a/css/components.css
+++ b/css/components.css
@@ -443,3 +443,23 @@
         height: 13px;
     }
 }
+
+.tooltip-event {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #fff;
+    z-index: 1000000000;
+    background: #333;
+    padding: 1rem;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: animationI 0.3s forwards;
+}
+
+.dark .tooltip-event {
+    color: #333;
+    background: #fff;
+}
