--- a/css/projects.css
+++ b/css/projects.css
@@ -59,7 +59,7 @@
 }
 
 .backgroundImage {
-    z-index: 9999;
+    z-index: 1;
     width: 100%;
     height: 100%;
     background-color: rgba(10, 10, 10, 0.2);
@@ -80,9 +80,28 @@
     opacity: 0;
 }
 
-.backgroundImage i {
+@keyframes animationI {
+    from {
+        opacity: 0;
+        filter: blur(100px);
+    }
+
+    to {
+        opacity: 1;
+        filter: blur(0px);
+    }
+}
+
+.backgroundImage:hover i,
+.backgroundImage:hover img {
+    display: none;
+}
+
+.backgroundImage i,
+.backgroundImage img {
     color: #ffff;
     font-size: 50px;
+    animation: animationI 0.3s forwards;
 }
 
 .buttons {
