--- a/css/components.css
+++ b/css/components.css
@@ -73,7 +73,7 @@
 }
 
 .arrow i {
-    position: absolute;
+    /* position: absolute; */
     font-size: 45px;
     cursor: pointer;
     color: #333;
@@ -380,6 +380,26 @@
     color: #333;
 }
 
+.tooltip-event {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #fff;
+    z-index: 1000000000;
+    background: #333;
+    padding: 1rem;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: animationI 0.3s forwards;
+}
+
+.dark .tooltip-event {
+    color: #333;
+    background: #fff;
+}
+
 @keyframes animationTooltip {
     from {
         filter: blur(15px);
@@ -401,7 +421,9 @@
     .arrow,
     .arrowAbout,
     .arrowSkills,
-    .arrowProjects {
+    .arrowProjects,
+    .tooltip-event,
+    .dark .tooltip-event {
         display: none;
     }
 }
@@ -442,24 +464,4 @@
         width: 13px;
         height: 13px;
     }
-}
-
-.tooltip-event {
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: #fff;
-    z-index: 1000000000;
-    background: #333;
-    padding: 1rem;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation: animationI 0.3s forwards;
-}
-
-.dark .tooltip-event {
-    color: #333;
-    background: #fff;
 }
