--- a/css/globals.css
+++ b/css/globals.css
@@ -60,6 +60,7 @@ section {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    position: relative !important;
 }
 
 label {
