--- a/css/profile.css
+++ b/css/profile.css
@@ -1,17 +1,28 @@
-#profile .arrow i {
-    left: 600px;
-    bottom: 130px;
+.arrowProfile {
+    transform: translateY(5rem);
 }
 
-#profile {
+@media (max-width: 1500px) {
+    .arrowProfile {
+        transform: translateY(2rem);
+    }
+}
+.profileID {
     margin-top: -60px;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 3rem;
     position: relative;
     z-index: 0;
+}
+
+#profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    gap: 3rem;
 }
 
 @keyframes coolAnimation {
