--- a/css/skills.css
+++ b/css/skills.css
@@ -13,6 +13,10 @@
     font-weight: 500;
 }
 
+.arrowSkills {
+    transform: translateY(4rem);
+}
+
 .skills-info-container {
     justify-content: center;
     align-items: center;
