--- a/css/profile.css
+++ b/css/profile.css
@@ -195,10 +195,21 @@
     }
 
     #profile {
+        gap: 0;
+    }
+
+    .profileID {
         height: max-content;
         flex-direction: column;
         margin: 5rem 0px 0px 0px;
         justify-content: start;
+        margin-top: -60px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 3rem;
+        position: relative;
+        z-index: 0;
     }
 
     .intro_picture img {
