--- a/css/components.css
+++ b/css/components.css
@@ -79,6 +79,8 @@
     color: #333;
     transition: all 0.3s;
     z-index: 200000;
+    position: relative;
+    animation: blink 3s infinite;
 }
 
 .arrow i:hover {
@@ -88,6 +90,24 @@
 
 .dark .arrow i {
     color: #fff;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 0;
+    }
+    25% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+    75% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 .hidden {
